<resources>
    <string name="app_name">ToPay</string>

    <!--App hint msg-->
    <string name="login_null_username">请输入用户名</string>
    <string name="login_null_email">请输入邮箱</string>
    <string name="login_null_code">请输入验证码</string>
    <string name="login_null_password">请输入登录密码</string>
    <string name="login_null_pay_password">请输入支付密码</string>
    <string name="send_code_success">验证码发送成功</string>
    <string name="reset_password_success">修改登录密码成功</string>
    <string name="reset_pay_password_success">修改支付密码成功</string>

    <!--App 双击退出-->
    <string name="app_exit">请再按一次退出App</string>
    <!--应用内文字-->
    <string name="navi_assets">资产</string>
    <string name="navi_mine">我的</string>
    <string name="navi_otc">OTC</string>
    <string name="language_title">语言</string>
    <string name="authentication_title">身份认证</string>
    <string name="payment_title">收款方式</string>
    <string name="about_title">关于</string>
    <string name="buying_title">一键买币</string>
    <string name="buying_detail_title">订单信息</string>
    <string name="account_security">账户安全</string>
    <string name="about_app">关于ToPay</string>
    <string name="select_photo">从相册选择</string>
    <string name="check_app_update_hint">检测到新版本, 是否更新？</string>


    <string name="increase_remove">移除</string>
    <string name="increase_add">添加</string>
    <string name="login_content">登录</string>
    <string name="register_content">注册</string>
    <string name="sign_out">登出</string>
    <string name="dialog_determine">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="forget_password">忘记密码?</string>

    <string name="check_for_updates">检查更新</string>
    <string name="account_update_email">修改邮箱</string>
    <string name="account_update_password">修改登录密码</string>
    <string name="account_update_pay_password">修改支付密码</string>
    <string name="account_old_password">原登录密码</string>
    <string name="account_old_pay_password">原支付密码</string>
    <string name="account_new_password">新登录密码</string>
    <string name="account_new_pay_password">新支付密码</string>
    <string name="forget_old_pwd">忘记原密码？</string>


    <string name="email_address">邮箱地址</string>
    <string name="login_password">登录密码</string>
    <string name="verification_code">验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="no_account">还没有账号?</string>
    <string name="already_account">已有账号?</string>
    <string name="verify_email">验证邮箱</string>

    <string name="next">下一步</string>
    <string name="user_name">用户名</string>
    <string name="del_currency">确定删除币种</string>
    <string name="sign_out_app">确认登出ToPay?</string>


    <string name="version_update">版本升级</string>
    <string name="download_loading">正在下载安装包，请稍后</string>
    <string name="send_code_load">发送验证码中...</string>
    <string name="please_wait">请稍后</string>
    <string name="verify_current_email">请先验证原来邮箱</string>
    <string name="login_invalid">登录失效，请重新登录</string>
    <string name="add_currency">添加币种</string>
    <string name="confirm_pay_pwd">确认支付密码</string>
    <string name="search_currency">搜索币种</string>
    <string name="null_search_data">没有搜索到相关结果</string>
    <string name="currency_version_news">当前已是最新版本</string>

    <string name="coins_status_payed">已收款</string>
    <string name="coins_status_complete">已完成</string>
    <string name="coins_status_cancel">已取消</string>
    <string name="coins_status_wait">待收款</string>
    <string name="coins_status_failed">失败</string>
    <string name="coins_title_status_buy">购买</string>
    <string name="coins_title_status_sell">出售</string>
    <string name="coins_order_number_title">订单号</string>
    <string name="wallet_buying_coins">买币</string>
    <string name="pay_type_bank">银行卡</string>
    <string name="pay_type_alipay">支付宝</string>
    <string name="pay_type_wechat">微信支付</string>

    <string name="buy_detail_time_hint">剩余收款时间</string>
    <string name="order_amount_hint">订单金额</string>
    <string name="order_number_hint">订单号</string>
    <string name="order_buyer_hint">买家</string>
    <string name="order_price_hint">单价</string>
    <string name="order_quantity_hint">数量</string>
    <string name="order_time_hint">下单时间</string>
    <string name="buyer_payment_method_hint">买家付款方式</string>
    <string name="payment_account_hint">付款账号</string>
    <string name="but_detail_submit">确认收款</string>
    <string name="transfer_sxf_hint">Topay 用户之间转账/收款无需手续费</string>
    <string name="transfer_available_balance">可用余额</string>
    <string name="transfer_sxf">交易手续费</string>
    <string name="transfer_trans_address">输入收款地址/账号</string>
    <string name="transfer_trans_price">输入转账金额</string>
    <string name="transfer_collection_address">收款地址</string>
    <string name="transfer_receipt">收款</string>
    <string name="copy_hint">内容已复制至剪贴板</string>
    <string name="share_hint">分享到：</string>
    <string name="qcode_hint">将二维码置于取景框即可自动扫描</string>
    <string name="buy_detail_remaining_time">mm分ss秒</string>
    <string name="old_pwd_not_null">原密码不可为空</string>
    <string name="new_pwd_not_null">新密码不可为空</string>
    <string name="collection_from">收款：来自</string>
    <string name="transfer_go">转账：转到</string>
    <string name="top_up_from">充值：来自</string>
    <string name="withdraw_mention">提现：提到</string>
    <string name="recharge">充值</string>
    <string name="withdraw">提现</string>
    <string name="waiting">等待中</string>
    <string name="successful_withdrawal">提现成功</string>
    <string name="cash_withdrawal_failure">提现失败</string>
    <string name="transaction_fees">交易手续费</string>
    <string name="source_address">来源地址</string>
    <string name="target_address">目标地址</string>
    <string name="hash_copy_hint">hash地址已复制到剪贴板</string>
    <string name="tran_hash_copy_hint">交易hash已复制到剪贴板</string>
    <string name="insufficient_permissions">权限不足</string>
    <string name="camera_not_permission">未给予相机权限将无法扫描二维码</string>
    <string name="invalid_address">无效地址</string>
    <string name="unacquired_currency">未获取到币种</string>
    <string name="logging_in">登录中...</string>
    <string name="no_permission_to_view_photos">未给予读取权限无法读取相册图片</string>
    <string name="photos_error">图片不正确，请重新选择</string>
    <string name="modifying_password">修改中...</string>
    <string name="mailbox_was_successfully">邮箱修改成功</string>
    <string name="success">成功</string>
    <string name="failed">失败</string>
    <string name="successful_operation">操作成功</string>
    <string name="collection_address">收款地址/账号</string>
    <string name="transfer_amount">转账金额</string>
    <string name="not_null">不可为空</string>
    <string name="incorrect">不正确</string>
    <string name="cancel_the_deal">取消交易</string>
    <string name="insufficient_balance">余额不足</string>
    <string name="transfer">转帐中...</string>
    <string name="in_verification">验证中...</string>
    <string name="page_all">全部</string>
    <string name="page_processing">进行中</string>
    <string name="page_completed">已完成</string>
    <string name="page_cancel">已取消</string>
    <string name="page_expenditure">支出</string>
    <string name="page_income">收入</string>
    <string name="page_buy">购买</string>
    <string name="page_sell">出售</string>
    <string name="btn_transfer">转账</string>
    <string name="btn_receipt">收款</string>
    <string name="input_transfer_price">输入转账金额</string>
    <string name="pay_password">支付密码</string>
    <string name="setting_password">设置密码</string>
    <string name="msg_title">通知</string>
    <string name="order_title">订单详情</string>
    <string name="order_price">金额：</string>
    <string name="order_sxf">交易手续费：</string>
    <string name="order_collection_address">收款地址：</string>
    <string name="order_transaction_hash">交易哈希：</string>
    <string name="scan_code_transfer">扫码转账</string>
    <string name="new_email">新邮箱</string>







    <string name="null_sdk">未发现有SD卡</string>
    <string name="service_error">服务器繁忙</string>

</resources>
