<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".activity.VerificationEmailActivity">

    <View
        android:id="@+id/status_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorWhite" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <TextView
            android:id="@+id/verification_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/verify_email"
            android:textColor="@color/login_title_tv_bg"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/verification_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:onClick="onClick"
            android:scaleType="center"
            android:src="@drawable/back_black" />
    </RelativeLayout>

    <EditText
        android:id="@+id/verification_email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="36dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/shape_login_edit_14dp"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="@color/login_edit_tv_bg"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/shape_login_edit_14dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/verification_code"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/verification_code"
            android:inputType="number"
            android:maxLength="6"
            android:maxLines="1"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="@color/login_edit_tv_bg"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/verification_send"
            android:layout_width="110dp"
            android:layout_height="36dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/get_code"
            android:textColor="@color/register_button_bg"
            android:textSize="13sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/verification_next"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="200dp"
        android:layout_marginRight="110dp"
        android:background="@drawable/shape_register_bg_22dp"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/next"
        android:textColor="@color/colorWhite"
        android:textSize="15sp" />
</LinearLayout>