<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <View
        android:id="@+id/status_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <TextView
            android:id="@+id/register_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/register_content"
            android:textColor="@color/login_title_tv_bg"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/register_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:onClick="onClick"
            android:scaleType="center"
            android:src="@drawable/back_black" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/register_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:gravity="center"
                android:text="@string/register_content"
                android:textColor="@color/content_tv_bg"
                android:textSize="35sp" />

            <EditText
                android:id="@+id/register_name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/shape_login_edit_14dp"
                android:hint="@string/user_name"
                android:inputType=""
                android:paddingLeft="20dp"
                android:textColor="@color/login_edit_tv_bg"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/register_email"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/shape_login_edit_14dp"
                android:hint="@string/email_address"
                android:inputType=""
                android:paddingLeft="20dp"
                android:textColor="@color/login_edit_tv_bg"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/shape_login_edit_14dp">

                <EditText
                    android:id="@+id/register_code"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/verification_code"
                    android:inputType="number"
                    android:paddingLeft="20dp"
                    android:textColor="@color/login_edit_tv_bg"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/register_send"
                    android:layout_width="110dp"
                    android:layout_height="36dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="12dp"
                    android:gravity="center"
                    android:onClick="onClick"
                    android:text="@string/get_code"
                    android:textColor="@color/register_button_bg"
                    android:textSize="13sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/register_submit"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginLeft="110dp"
                android:layout_marginTop="99dp"
                android:layout_marginRight="110dp"
                android:background="@drawable/shape_login_bg_22dp"
                android:gravity="center"
                android:onClick="onClick"
                android:text="@string/next"
                android:textColor="@color/colorWhite"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/register_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="25dp"
                android:gravity="center"
                android:onClick="onClick"
                android:text="@string/already_account"
                android:textColor="@color/forget_password_bg"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>