<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <View
        android:id="@+id/status_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <RelativeLayout
        android:id="@+id/account_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_below="@id/status_bar"
        android:background="@color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/account_security"
            android:textColor="@color/login_content"
            android:textSize="17sp" />

        <ImageView
            android:id="@+id/back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="6dp"
            android:onClick="onClick"
            android:scaleType="center"
            android:src="@color/content_tv_bg" />
    </RelativeLayout>

    <com.allen.library.SuperTextView
        android:id="@+id/account_email"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="36dp"
        android:layout_marginRight="20dp"
        android:onClick="onClick"
        android:paddingLeft="15dp"
        app:sBackgroundDrawableRes="@drawable/shape_login_edit_14dp"
        app:sDividerLineHeight="1dp"
        app:sLeftTextString="@string/account_update_email"
        app:sRightIconRes="@drawable/next_icon_black"
        app:sUseRipple="false" />

    <com.allen.library.SuperTextView
        android:id="@+id/account_password"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="20dp"
        android:onClick="onClick"
        android:paddingLeft="15dp"
        app:sBackgroundDrawableRes="@drawable/shape_login_edit_14dp"
        app:sDividerLineHeight="1dp"
        app:sLeftTextString="@string/account_update_password"
        app:sRightIconRes="@drawable/next_icon_black"
        app:sUseRipple="false" />

    <com.allen.library.SuperTextView
        android:id="@+id/account_pay_password"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="20dp"
        android:onClick="onClick"
        android:paddingLeft="15dp"
        app:sBackgroundDrawableRes="@drawable/shape_login_edit_14dp"
        app:sDividerLineHeight="1dp"
        app:sLeftTextString="@string/account_update_pay_password"
        app:sRightIconRes="@drawable/next_icon_black"
        app:sUseRipple="false" />
</LinearLayout>