<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <View
        android:id="@+id/status_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorWhite" />

    <com.mvc.topay.and.topay_android.view.NoScrollViewPager
        android:id="@+id/main_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorWhite"
        android:layout_weight="1" />

    <RadioGroup
        android:id="@+id/main_group"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/home_wallet"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:drawableTop="@drawable/select_home_button_wallet"
            android:gravity="center"
            android:paddingTop="5dp"
            android:text="@string/navi_assets"
            android:textColor="@color/select_home_button_wallet"
            android:textSize="10sp" />

        <RadioButton
            android:id="@+id/home_otc"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/select_home_button_wallet"
            android:gravity="center"
            android:paddingTop="5dp"
            android:text="@string/navi_otc"
            android:textColor="@color/select_home_button_wallet"
            android:textSize="10sp" />

        <RadioButton
            android:id="@+id/home_mine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/select_home_button_main"
            android:gravity="center"
            android:paddingTop="5dp"
            android:text="@string/navi_mine"
            android:textColor="@color/select_home_button_wallet"
            android:textSize="10sp" />
    </RadioGroup>
</LinearLayout>