<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <View
        android:id="@+id/status_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <LinearLayout
        android:id="@+id/vp_title_layout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_below="@id/status_bar"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/transfer_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="6dp"
            android:onClick="onClick"
            android:scaleType="center"
            android:src="@drawable/back_black" />

        <TextView
            android:id="@+id/transfer_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="- 转帐"
            android:textColor="@color/login_content"
            android:textSize="17sp" />

        <ImageView
            android:id="@+id/transfer_qcode"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="5dp"
            android:onClick="onClick"
            android:scaleType="center"
            android:src="@drawable/scan_qrcode" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/transfer_info_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/vp_title_layout"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingTop="12dp"
        android:paddingRight="15dp"
        android:paddingBottom="12dp">


        <EditText
            android:id="@+id/transfer_trans_address"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_login_edit_14dp"
            android:drawablePadding="10dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:hint="@string/transfer_trans_address"
            android:inputType=""
            android:paddingLeft="12dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:textColorHint="#999A9D"
            android:textCursorDrawable="@drawable/bg_edit_cursor_color"
            android:textSize="15sp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="30dp">

            <EditText
                android:id="@+id/transfer_trans_price"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/shape_login_edit_14dp"
                android:digits="1234567890."
                android:hint="@string/input_transfer_price"
                android:inputType="numberDecimal"
                android:paddingLeft="12dp"
                android:singleLine="true"
                android:textColorHint="#999A9D"
                android:textCursorDrawable="@drawable/bg_edit_cursor_color"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/btc_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="20dp"
                android:text="-"
                android:textColor="@color/content_tv_bg"
                android:textSize="17sp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fee_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/transfer_info_group"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="31dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transfer_available_balance"
                android:textColor="@color/text_gray"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/transfer_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="-"
                android:textColor="@color/content_tv_bg" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="15dp"
            android:background="@color/content_tv_bg" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transfer_sxf"
                android:textColor="@color/text_gray"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/transfer_fees"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="-"
                android:textColor="@color/content_tv_bg" />
        </LinearLayout>


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_below="@id/fee_layout"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:textColor="@color/detail_sxf_bg"
        android:padding="10dp"
        android:text="@string/transfer_sxf_hint"
        android:textSize="11sp"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/transfer_submit"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="110dp"
        android:layout_marginRight="110dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/shape_login_bg_22dp"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold" />
</RelativeLayout>